# deepshelf-ai

./: .dockerignore  .env.example  .gitattributes  Advanced Features to Consider.txt  Book_Recommender_Project_SEC.txt  DEPLOYMENT_NOTES.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  gemini.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_analytics.bat  run_api.bat  run_app.bat
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/feedback/: user_feedback.jsonl
docker/: Dockerfile.backend  requirements.backend.txt
docs/: ARCHITECTURE.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  BookCard.tsx  BookCover.tsx  Loader.tsx  api.ts  index.css  types.ts
frontend/src/data/: personas.ts
scripts/: download_data.py  download_model.py  enrich_book_covers.py  prepare_100k_data.py  prepare_goodreads_data.py
src/: config.py  data_processor.py  embedder.py  exceptions.py  recommender.py  utils.py
src/book_recommender/: __init__.py  utils.py
src/book_recommender/api/: dependencies.py  main.py  models.py
src/book_recommender/apps/: analytics_app.py  main_app.py  main_appV2.py
src/book_recommender/core/: config.py  exceptions.py  logging_config.py
src/book_recommender/data/: processor.py
src/book_recommender/ml/: __init__.py  clustering.py  embedder.py  explainability.py  feedback.py  recommender.py
src/book_recommender/services/: personalizer.py
tests/: conftest.py  test_api_endpoints.py  test_app.py  test_data_processor.py  test_embedder.py  test_integration.py  test_personalization_integration.py  test_recommender.py
